# finacial_data_scan

./: .env.example  .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml
data/: companies.xlsx
scripts/: pilot.py  run_assemble.py  run_classify.py  run_reader.py  run_research.py  run_search.py  validate.py
src/screener/: assemble.py  classify.py  companies.py  config.py  models.py  prompts.py  reader.py  research.py  search.py  utils.py
src/screener/agents/: reader.md  search.md
tests/: conftest.py  test_non_us_search.py  test_sec_classify.py
