[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]

[project]
name = "screener"
version = "0.1.0"
description = "AI-assisted screening pipeline for identifying programmatic acquirers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "google-genai>=1.67.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires Vertex AI credentials",
]

[project.scripts]
screener = "main:main"
